# PILAR

./: README.md
PILAR/: Makefile  Makefile.cc  Makefile.gcc  P_AVL.c  P_bits.c  P_gtree.c  P_list.c  P_parser.c  P_protein.c  P_queue.c  P_sort.c  P_stack.c  Pilar_10  Pilar_10.c  Pilar_2  Pilar_4  Pilar_4.c  Pilar_5  Pilar_6  Pilar_6.c  Pilar_7  Pilar_7.c  Pilar_8  Pilar_9  b_tree.pas  gmon.out
PILAR/MCon/: MCmain  MCmain.c  MCmain.gcda  MCmain.gcno  MCon.c  MCon.gcda  MCon.gcno  MCon.h  Torture.c  Torture.gcda  Torture.gcno  gmon.out
PILAR/MPQ/: mpq.c
PILAR/PILAR/: P_AVL.c
PILAR/RCS/: P_AVL.c,v  P_dlist.c,v  P_gtree.c,v  P_stack.c,v
PILAR/aa/: embl.aa  ig.aa  nbrf.aa  pir.aa  uwgcg.aa
PILAR/db/: Makefile  P_EMBL.c  P_Fitch.c  P_GCGSw.c  P_GenBank.c  P_IG.c  P_PIR.c  P_Pearson.c  P_Strider.c  P_Zuker.c  P_unknown.c
PILAR/h/: P_db.h  P_extern.h  P_gtree.h  P_queue.h  P_region.h  P_stack.h  P_stree.h  P_think.h
PILAR/old/: Pilar_v1.tgz  Pilar_v1.zoo  (+3 more)
PILAR8/: GMakefile.orig  Makefile  Makefile.am  Makefile.in  Makefile.orig  config.cache  config.h  config.h.in  config.status  configure  configure.in  configure.scan  libtool  makesccs
PILAR8/MCon/: MCon.h  Torture.c
PILAR8/RCS/: P_list.c,v  P_queue.c,v  P_sort.c,v  P_stree.c,v
PILAR8/aa/: fitch.aa  gcgsw.aa  genbank.aa  pearson.aa  strider.aa  zuker.aa
PILAR8/db/: Makefile  Makefile.am  Makefile.in  P_EMBL.c  P_Fitch.c  P_GCGSw.c  P_GenBank.c  P_IG.c  P_PIR.c  P_Pearson.c  P_Preer.c  P_Strider.c  P_UWGCG.c  P_Zuker.c  P_db.c  P_unknown.c  configure  configure.in
PILAR8/include/: P_AVL.h  P_dblow.h  P_defs.h  P_desc.h  P_dlist.h  P_global.h  P_graph.x  P_graphic.h  P_parser.h  P_sort.h  P_utils.h  P_values.h  portable.h
PILAR8/old/: Pilar_v4.tgz  Pilar_v7.tar.Z
PILAR8/param/: argosfin.nor  beta.nor  bulk.nor  hydro_fauchere.scl  hydro_ges.scl  hydro_kd.scl  kytedool.nor  turn_levitt.scl  turnlevi.nor
PILAR8/pascal/: b_tree.pas
PILAR8/rg/: Makefile  Makefile.am  Makefile.in  P_graph1.c  P_graph4.c  configure  configure.in
PILAR8/src/: Makefile  Makefile.am  Makefile.in  P_bits.c  P_descr.c  P_dlist.c  P_list.c  P_region.c  P_splay.c  P_stree.c  P_think.c  P_utils.c  P_values.c  Pilar_2.c  Pilar_5.c  Pilar_8.c  Pilar_9.c  configure  configure.in
PILAR8/test/: history
PILAR8/test/dxr/: cyb2.5.dxr  cyb4.dxr  sequence.restrictions
old/: Pilar_v2.zoo  Pilar_v3.tgz  Pilar_v4.zoo  Pilar_v5.zoo  Pilar_v6.tar.Z
param/: alfa.nor  anti_welling.scl  froemmel.nor  hydratio.nor  hydro_bull.scl  hydro_janin.scl  hydro_manavalan.scl  hydro_nozaki.scl  hydro_parker.scl  hydro_sweet.scl  hydro_vonheijne.scl  hydro_wolfenden.scl  polarity.nor  rargos2.nor  rargos3.nor  surfsand.nor  surleeri.nor
(+30 files in other folders)
