dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/P_think.c)
AC_CONFIG_SUBDIRS(src db rg)
AM_INIT_AUTOMAKE(pilar,8.0)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_LANG_C
AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AM_PROG_LIBTOOL

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(malloc.h)
AC_CHECK_HEADERS(include/P_global.h,AC_MSG_ERROR(You must have an incomplete distribution))

AC_PATH_XTRA

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(strerror)

AC_OUTPUT(db/Makefile docs/latex/Makefile lib/Makefile src/Makefile rg/Makefile Makefile)
