dnl Process this file with autoconf to produce a configure script.
AC_INIT(P_GCGSw.c)
AM_INIT_AUTOMAKE(pilar,8.0)
AM_CONFIG_HEADER(../config.h)

dnl Checks for programs.
AM_PROG_LIBTOOL
AC_PROG_CC

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.

AC_OUTPUT(Makefile)
