bin_PROGRAMS = Pilar_2 Pilar_4 Pilar_5 Pilar_6 Pilar_7 Pilar_8 Pilar_9 Pilar_10

Pilar_2_SOURCES = Pilar_2.c

Pilar_4_SOURCES = Pilar_4.c

Pilar_5_SOURCES = Pilar_5.c

Pilar_6_SOURCES = Pilar_6.c

Pilar_7_SOURCES = Pilar_7.c

Pilar_8_SOURCES = Pilar_8.c

Pilar_9_SOURCES = Pilar_9.c

Pilar_10_SOURCES = Pilar_10.c

LDADD = libPILAR.la
LDFLAGS = -L../lib

INCLUDES = -I../include

lib_LTLIBRARIES = libPgen.la
 
libPgen_la_SOURCES = P_AVL.o P_dlist.o P_gtree.o P_list.o P_queue.o P_sort.o P_stack.o P_stree.o

libPgen_la_LDFLAGS = -version-info 8:0:0
